# teach-mlflow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  roadmap.md
.claude/skills/mlflow-tutorial-expand/: SKILL.md
.claude/skills/mlflow-tutorial-improve/: SKILL.md
official_tutorials/: tracking_quickstart.ipynb
roadmap/: plan.md  roadmap.md
src/basics/: a_setup_mlflow.ipynb  b_tracking_quickstart.ipynb
src/gen_ai/: a_tracing_quickstart.ipynb  b_tracing_a_multistep_app.ipynb  c_genai_evaluation.ipynb  d_langchain_agent.ipynb  e_prompt_registry.ipynb  f_genai_app_serving.ipynb  g_feedback_and_monitoring.ipynb  h_dspy_optimization.ipynb  i_rag_capstone.ipynb
src/ml/: a_hyperparameter_tuning.ipynb  a_model_logging.ipynb  a_setup_mlflow.ipynb  b_hyperparameter_tuning.ipynb  b_logging_plots.ipynb  b_tracking_quickstart.ipynb  c_logging_callbacks.ipynb  c_logging_plots.ipynb  d_logging_callbacks.ipynb  d_logging_plots.ipynb  d_model_evaluation.ipynb  e_logging_callbacks.ipynb  e_model_evaluation.ipynb  e_model_registry.ipynb  f_model_evaluation.ipynb  f_model_registry.ipynb  f_model_serving.ipynb  g_dataset_logging.ipynb  g_model_registry.ipynb  g_model_serving.ipynb  h_dataset_logging.ipynb  h_model_serving.ipynb  i_capstone_end_to_end.ipynb  i_system_metrics.ipynb  j_capstone_end_to_end.ipynb  j_system_metrics.ipynb
src/official_tutorials/: a_setup_mlflow.ipynb  b_tracking_quickstart.ipynb  c_hyperparameter_tuning.ipynb  d_logging_plots.ipynb  e_logging_callbacks.ipynb  h_model_serving.ipynb  i_dataset_logging.ipynb  k_capstone_end_to_end.ipynb  tracking_quickstart.ipynb
