[project]
name = "teach-mlflow"
version = "0.1.0"
description = "Tutorials and teaching material for MLflow, from beginner to advanced topics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "mlflow>=3.12.0",
    "nvidia-ml-py>=13.610.43",
    "openai>=2.41.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skops>=0.14.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.17.0",
]
