[project]
name = "teach-mlflow"
version = "0.1.0"
description = "Tutorials and teaching material for MLflow, from beginner to advanced topics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dspy>=3.2.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-azure-openai>=0.5.2",
    "llama-index-llms-azure-openai>=0.5.5",
    "llama-index-vector-stores-milvus>=1.1.0",
    "mlflow>=3.12.0",
    "nvidia-ml-py>=13.610.43",
    "openai>=2.41.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pymilvus>=2.6.15",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "skops>=0.14.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.17.0",
]
